--- a/animations.html
+++ b/animations.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NodeJS Game Server</title>
+  <title>Animation Studio</title>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">  
 
@@ -84,10 +84,10 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="about-us.html">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link" href="contact-us.html">Contact Us</a>
         </li>
         <li class="nav-item request_btn">
           <button data-bs-toggle="modal" data-bs-target="#requestQoute">Request a Quote</button>
@@ -106,14 +106,225 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
-      <h1 class="text-white" data-aos="fade-right">Animations</h1>
+      <h1 class="text-white" data-aos="fade-right">Animation Studio</h1>
       
-      <p class="text-white" data-aos="fade-up">We can turn your idea into an epic HTML5 game.</p>
+      <p class="text-white" data-aos="fade-up">Adding life to art assets</p>
       <p data-aos="fade-up"><button class="btn_all" style="background:#6d2c90;">Request a Quote <img src="assets/img/arrow-next.png"></button></p>
     </div>
     </div>
 
   </div>
+</div>
+
+
+<div class="container-fluid py-indent bg_light">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <p>Animation is an integral part of creating a game art and design that captivates the players. The team at Juego Studios consists of technically proficient animators, who have a thorough knowledge and understanding of the basic principles of animation. All our animators and riggers follow industry standards to ensure smooth outputs and seamless animation flows. Our animation studios offer both 3D as well as 2D animation services.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="container-fluid py-indent">
+  <div class="container container_border mb-0">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>  lorem ipsum</div>
+        <h2 class="block_title block_sub_title" data-aos="fade-down">3d Animation Company</h2>
+      </div>
+    </div>
+    <div class="row animation_block" style="margin-top:35px;">
+      <div class="col-md-3">
+        <div class="w-100">
+          <img src="assets/img/3d-model-in-t-pose.webp" class="w-100" />
+          <h2 class="animation_title">3D MODEL IN T-POSE</h2>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="w-100">
+          <img src="assets/img/3d-model-with-rigging.webp" class="w-100" />
+          <h2 class="animation_title">3D MODEL WITH RIGGING</h2>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="w-100">
+          <img src="assets/img/posing-after-rigging.jpg" class="w-100" />
+          <h2 class="animation_title">POSING AFTER RIGGING</h2>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="w-100">
+          <img src="assets/img/3d_Anim.gif" class="w-100" />
+          <h2 class="animation_title">ANIMATION</h2>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <p>Our animators animate the control points from the rig to provide animated movement to the 3D characters, vehicles or any 3d props . Our clients very much appreciate the patience and attention to detail which we inculcate into our animation process.</p>
+        <p>They have also developed a strong liking for our creativity and imagination skills in this process. These animations are done as per the requirements and later exported into the game engines.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid py-indent pt-0">
+  <div class="container container_border mb-0">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>  lorem ipsum</div>
+        <h2 class="block_title block_sub_title" data-aos="fade-down">2d Spine Animation</h2>
+      </div>
+    </div>
+    <div class="row animation_block" style="margin-top:35px;">
+      <div class="col-md-4">
+        <div class="w-100">
+          <img src="assets/img/2D-image.jpg" class="w-100" />
+          <h2 class="animation_title">2D IMAGE</h2>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="w-100">
+          <img src="assets/img/rigging-in-spine.jpg" class="w-100" />
+          <h2 class="animation_title">RIGGING IN SPINE</h2>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="w-100">
+          <img src="assets/img/2D-spineAnimation.gif" class="w-100" />
+          <h2 class="animation_title">FINAL 2D SPINE ANIMATION</h2>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <p>This is one of the most popular forms of animation for  2D games. This is an process which we usually use for mobile games which require large number of animations. Animation has been a main aspect for mobile games throughout the history of mobile game development. Our animators create a basic skeleton and manipulate bones in different parts, directions with the intention to model various poses and imitate movement.</p>
+        <p>Being an efficient process this results in lighter animation for mobile & web platforms and works well for 2D Game development.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid py-indent pt-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>  lorem ipsum</div>
+        <h2 class="block_title block_sub_title" data-aos="fade-down">2d Frame Animation</h2>
+      </div>
+    </div>
+    <div class="row animation_block" style="margin-top:35px;">
+      <div class="col-md-3">
+        <div class="w-100">
+          <img src="assets/img/2d-anim-image.jpg" class="w-100" />
+          <h2 class="animation_title">CHARACTER DESIGN</h2>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="w-100">
+          <img src="assets/img/2d-anim-image2.jpg" class="w-100" />
+          <h2 class="animation_title">ANIMATION FRAMES DEVELOPMENT</h2>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="w-100">
+          <img src="assets/img/boy_Anim.gif" class="w-100" />
+          <h2 class="animation_title">FINAL ANIMATIONS</h2>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <p>This is one of the traditional animation methods. The character images are created by our artists, later teams make different poses of the character in each frame along with particle animation. Our 2D frame animators are highly skilled and hence execute this animation process effortlessly.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid py-indent bg_light">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>  lorem ipsum</div>
+        <h2 class="block_title block_sub_title" data-aos="fade-down">Why work with us</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <ul class="list_all">
+          <li>250+ Apps & games delivered for Mobiles & Tablets.</li>
+          <li>Worked with start-up to Fortune 500 companies.</li>
+          <li>As one of the reputed 3D animation studios, we’ve created spectacular art assets for our games</li>
+          <li>Some of our art assets have been lauded by our clients very much.</li>
+          <li>Our standards are on par with the best artists in the industry.</li>
+          <li>On time delivery</li>
+        </ul>
+      </div>
+    </div>
+    </div>
+  </div>
+
+<div class="container-fluid py-indent">
+  <div class="container">
+  <div class="row">
+      <div class="col-md-12">
+        <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>  lorem ipsum</div>
+        <h2 class="block_title block_sub_title" data-aos="fade-down">Latest Works</h2>
+      </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="w-100 gattlegems_content">
+        <div class="gattlegems_img">
+          <img class="w-100" src="assets/img/PortfolioWeb2020_BattleGems.jpg" />
+        </div>
+        <div class="gattlegems_btn">
+          <h4>Match-3 puzzle with fantasy themed RPG</h4>
+          <p class="m-0">android ios unity3d web</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="w-100 gattlegems_content">
+        <div class="gattlegems_img">
+          <img class="w-100" src="assets/img/PortfolioWeb2020_Golf.jpg" />
+        </div>
+        <div class="gattlegems_btn">
+          <h4>Sports simulation</h4>
+          <p class="m-0">android ios unity3d</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="w-100 gattlegems_content">
+        <div class="gattlegems_img">
+          <img class="w-100" src="assets/img/PortfolioWeb2020_SCS-1.jpg" />
+        </div>
+        <div class="gattlegems_btn">
+          <h4>Soccer-Manager with Realtime Multiplayer Simulation</h4>
+          <p class="m-0">desktop-pc steam unity3d</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="w-100 gattlegems_content">
+        <div class="gattlegems_img">
+          <img class="w-100" src="assets/img/MPL_Pool_Portfolio2019-1.jpg" />
+        </div>
+        <div class="gattlegems_btn">
+          <h4>Sports Multiplayer Pool Game</h4>
+          <p class="m-0">android ios unity3d</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <button class="btn_all btn_try_demo">View More  <img src="assets/img/arrow-next.png" style="max-width: 14px;opacity: .4;position: relative;top: 1px;margin-left: 10px;filter: inherit;"></button>
+  </div>
+    </div>
 </div>
 
 
