--- a/html5-game-development.html
+++ b/html5-game-development.html
@@ -77,17 +77,17 @@
             Art & Design
           </a>
           <ul class="sub-menu" aria-labelledby="Animationservices">
-            <li><a class="dropdown-item" href="#">Concept Design</a></li>
-            <li><a class="dropdown-item" href="#">UI/UX Design</a></li>
-            <li><a class="dropdown-item" href="#">Character Design</a></li>
-            <li><a class="dropdown-item" href="#">Animations</a></li>
+            <li><a class="dropdown-item" href="concept-design.html">Concept Design</a></li>
+            <li><a class="dropdown-item" href="ui-ux-design.html">UI/UX Design</a></li>
+            <li><a class="dropdown-item" href="character-design.html">Character Design</a></li>
+            <li><a class="dropdown-item" href="animations.html">Animations</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="about-us.html">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link" href="contact-us.html">Contact Us</a>
         </li>
         <li class="nav-item request_btn">
           <button data-bs-toggle="modal" data-bs-target="#requestQoute">Request a Quote</button>
@@ -117,7 +117,7 @@
 </div>
 
 <div class="container-fluid py-indent">
-  <div class="container">
+  <div class="container container_border mb-0">
     <div class="row">
       <div class="col-md-12">
       	<div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>  lorem ipsum</div>
@@ -156,7 +156,7 @@
 </div>
 
 <div class="container-fluid py-indent bg_light multi-platform">
-  <div class="container">
+  <div class="container container_border mb-0">
     <div class="row">
       <div class="col-md-12">
         <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span> lorem ipsum</div>
@@ -194,7 +194,7 @@
 </div>
 
 <div class="container-fluid py-indent bg_light multi-platform pt-0">
-  <div class="container">
+  <div class="container container_border mb-0">
     <div class="row">
       <div class="col-md-12">
         <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span> lorem ipsum</div>
@@ -251,7 +251,7 @@
 
 
 <div class="container-fluid py-indent bg_light pt-0">
-  <div class="container">
+  <div class="container container_border mb-0">
     <div class="row">
       <div class="col-md-12">
         <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>  lorem ipsum</div>
@@ -307,7 +307,7 @@
 
 
 <div class="container-fluid py-indent bg_light pt-0">
-  <div class="container">
+  <div class="container container_border mb-0">
     <div class="row">
       <div class="col-md-12">
         <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>  lorem ipsum</div>
