--- a/mobilegamedevelopment.html
+++ b/mobilegamedevelopment.html
@@ -69,7 +69,7 @@
           <ul class="sub-menu" aria-labelledby="Technologyservice">
             <li><a class="dropdown-item" href="unity3D-game-development.html">Unity3D Game Development</a></li>
             <li><a class="dropdown-item" href="html5-game-development.html">HTML5 Game Development</a></li>
-            <li><a class="dropdown-item" href="#">NodeJS Game Server</a></li>
+            <li><a class="dropdown-item" href="nodeJS-game-server.html">NodeJS Game Server</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown_menu">
@@ -77,17 +77,17 @@
             Art & Design
           </a>
           <ul class="sub-menu" aria-labelledby="Animationservices">
-            <li><a class="dropdown-item" href="#">Concept Design</a></li>
-            <li><a class="dropdown-item" href="#">UI/UX Design</a></li>
-            <li><a class="dropdown-item" href="#">Character Design</a></li>
-            <li><a class="dropdown-item" href="#">Animations</a></li>
+            <li><a class="dropdown-item" href="concept-design.html">Concept Design</a></li>
+            <li><a class="dropdown-item" href="ui-ux-design.html">UI/UX Design</a></li>
+            <li><a class="dropdown-item" href="character-design.html">Character Design</a></li>
+            <li><a class="dropdown-item" href="animations.html">Animations</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="about-us.html">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link" href="contact-us.html">Contact Us</a>
         </li>
         <li class="nav-item request_btn">
           <button data-bs-toggle="modal" data-bs-target="#requestQoute">Request a Quote</button>
