--- a/about-us.html
+++ b/about-us.html
@@ -102,7 +102,7 @@
 <!-- Header End! -->
 
 
-<div class="container-fluid banner banner_other py-indent">
+<div class="container-fluid banner banner_other py-indent" style="background:#b70849;">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
@@ -116,7 +116,327 @@
   </div>
 </div>
 
+<div class="container-fluid py-indent">
+  <div class="container container_border mb-0">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span> lorem ipsum</div>
+        <h2 class="block_title block_sub_title" data-aos="fade-down">Who We Are</h2>
+        <p>Started in 2013, JUEGO STUDIOS has expanded from being a game design company to a full-fledged technology venture dealing with AR/VR, IoT, AI and other emerging technologies. Our team includes some of the top game developers, AR/VR specialists, designers, artists, animators and technology experts in the industry. We believe that constant innovation is the key to building successful products. As a leading software development company, we’re passionate and enthusiastic about experimenting with latest emerging technologies and strive to integrate creative vision, technical expertise and project management capabilities to ensure customer satisfaction.</p>
+      </div>
+    </div>
+  </div>
+</div>
 
+<div class="container-fluid py-indent desktop_about pt-0">
+    <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>  lorem ipsum</div>
+        <h2 class="block_title block_sub_title" data-aos="fade-down">About Juego</h2>
+      </div>
+    </div>
+    <div class="row mb-4">
+      <div class="col-lg-3 col-md-4">
+        <div class="w-100 turnkey_content back_office">
+          <img class="team_image" src="assets/img/team-150x150.png" />
+          <strong class="team_nub">300</strong>
+          <p class="team_plush">+</p>
+          <p class="team_des">Team</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4">
+        <div class="w-100 turnkey_content back_office">
+          <img class="team_image" src="assets/img/user-interface-150x150.png" />
+          <strong class="team_nub">500</strong>
+          <p class="team_plush">+</p>
+          <p class="team_des">Apps & Games</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4">
+        <div class="w-100 turnkey_content back_office">
+          <img class="team_image" src="assets/img/growth-150x150.png" />
+          <strong class="team_nub">10</strong>
+          <p class="team_plush">+</p>
+          <p class="team_des">Years in the Market</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4">
+        <div class="w-100 turnkey_content back_office">
+          <img class="team_image" src="assets/img/crm-150x150.png" />
+          <strong class="team_nub">200</strong>
+          <p class="team_plush">+</p>
+          <p class="team_des">Client</p>
+        </div>
+      </div>
+    
+    </div>
+    <div class="row">
+      <div class="col-lg-3 col-md-4">
+        <div class="w-100 turnkey_content back_office">
+          <img class="team_image" src="assets/img/team-150x150.png" />
+          <strong class="team_nub">300</strong>
+          <p class="team_plush">+</p>
+          <p class="team_des">Team</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4">
+        <div class="w-100 turnkey_content back_office">
+          <img class="team_image" src="assets/img/user-interface-150x150.png" />
+          <strong class="team_nub">500</strong>
+          <p class="team_plush">+</p>
+          <p class="team_des">Apps & Games</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4">
+        <div class="w-100 turnkey_content back_office">
+          <img class="team_image" src="assets/img/growth-150x150.png" />
+          <strong class="team_nub">10</strong>
+          <p class="team_plush">+</p>
+          <p class="team_des">Years in the Market</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4">
+        <div class="w-100 turnkey_content back_office">
+          <img class="team_image" src="assets/img/crm-150x150.png" />
+          <strong class="team_nub">200</strong>
+          <p class="team_plush">+</p>
+          <p class="team_des">Client</p>
+        </div>
+      </div>
+    
+    </div>
+
+  </div>
+  </div>
+
+<div class="container-fluid py-indent bg_light">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <p class="text-center">“When career and passion come together it becomes a wonderful thing. I believe that – You don’t build a business, you build people & then people build the business. I take great pride in encouraging our team to do the best as they can, which is of significant importance to our company’s vision for total client satisfaction”.</p>
+        <strong class="text-center d-block">Phoenix Baker</strong>
+        <p class="text-center">Founder</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <div class="container-fluid py-indent block-team">
+    <div class="container">
+      <div class="row">
+      <div class="col-md-12">
+        <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>  lorem ipsum</div>
+        <h2 class="block_title block_sub_title" data-aos="fade-down">The Team</h2>
+      </div>
+    </div>
+    <div class="row" style="margin-top:20px;">
+      <div class="col-md-3">
+        <div class="w-100">
+          <div class="w-100">
+            <img src="assets/img/team1.jpg" class="w-100" />
+          </div>
+          <div class="w-100">
+            <h2 class="title_team">Phoenix Baker</h2>
+            <p class="m-0 des_team">Founder & CEO</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="w-100">
+          <div class="w-100">
+            <img src="assets/img/team.jpg" class="w-100" />
+          </div>
+          <div class="w-100">
+            <h2 class="title_team">Mia Ward</h2>
+            <p class="m-0 des_team">Business Development Executive</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="w-100">
+          <div class="w-100">
+            <img src="assets/img/team1.jpg" class="w-100" />
+          </div>
+          <div class="w-100">
+            <h2 class="title_team">Phoenix Baker</h2>
+            <p class="m-0 des_team">Marketing Expert</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="w-100">
+          <div class="w-100">
+            <img src="assets/img/team.jpg" class="w-100" />
+          </div>
+          <div class="w-100">
+            <h2 class="title_team">Mia Ward</h2>
+            <p class="m-0 des_team">Project Manager</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="w-100">
+          <div class="w-100">
+            <img src="assets/img/team1.jpg" class="w-100" />
+          </div>
+          <div class="w-100">
+            <h2 class="title_team">Phoenix Baker</h2>
+            <p class="m-0 des_team">Data Analyst</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="w-100">
+          <div class="w-100">
+            <img src="assets/img/team.jpg" class="w-100" />
+          </div>
+          <div class="w-100">
+            <h2 class="title_team">Mia Ward</h2>
+            <p class="m-0 des_team">Human Resource Executive</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="w-100">
+          <div class="w-100">
+            <img src="assets/img/team.jpg" class="w-100" />
+          </div>
+          <div class="w-100">
+            <h2 class="title_team">Mia Ward</h2>
+            <p class="m-0 des_team">HR Executive</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="w-100">
+          <div class="w-100">
+            <img src="assets/img/team1.jpg" class="w-100" />
+          </div>
+          <div class="w-100">
+            <h2 class="title_team">Phoenix Baker</h2>
+            <p class="m-0 des_team">Team Leader</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="w-100">
+          <div class="w-100">
+            <img src="assets/img/team.jpg" class="w-100" />
+          </div>
+          <div class="w-100">
+            <h2 class="title_team">Mia Ward</h2>
+            <p class="m-0 des_team">Sr. Full Stack Developer</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="w-100">
+          <div class="w-100">
+            <img src="assets/img/team1.jpg" class="w-100" />
+          </div>
+          <div class="w-100">
+            <h2 class="title_team">Phoenix Baker</h2>
+            <p class="m-0 des_team">WordPress Developer & Designer</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="w-100">
+          <div class="w-100">
+            <img src="assets/img/team.jpg" class="w-100" />
+          </div>
+          <div class="w-100">
+            <h2 class="title_team">Mia Ward</h2>
+            <p class="m-0 des_team">QA</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="w-100">
+          <div class="w-100">
+            <img src="assets/img/team1.jpg" class="w-100" />
+          </div>
+          <div class="w-100">
+            <h2 class="title_team">Phoenix Baker</h2>
+            <p class="m-0 des_team">React Developer</p>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+    </div>
+  </div>
+
+  <div class="container-fluid py-indent bg_light">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="block_title block_sub_title text-center" data-aos="fade-down">Industries We Work With</h2>
+        </div>
+      </div>
+      <div class="row industries_work">
+        <div class="col-sm-2">
+          <a href="#" class="text-center">
+            <img src="assets/img/gamngIcon.png" class="w-100" />
+            <span class="d-block text-center">Gaming</span>
+          </a>
+        </div>
+        <div class="col-sm-2">
+          <a href="#" class="text-center">
+            <img src="assets/img/AutomotiveIcon.png" class="w-100" />
+            <span class="d-block text-center">AUTOMOTIVE</span>
+          </a>
+        </div>
+        <div class="col-sm-2">
+          <a href="#" class="text-center">
+            <img src="assets/img/xRealEstatIcon.png" class="w-100" />
+            <span class="d-block text-center">REAL ESTATE</span>
+          </a>
+        </div>
+        <div class="col-sm-2">
+          <a href="#" class="text-center">
+            <img src="assets/img/xEducationIcon.png" class="w-100" />
+            <span class="d-block text-center">EDUCATION</span>
+          </a>
+        </div>
+        <div class="col-sm-2">
+          <a href="#" class="text-center">
+            <img src="assets/img/xMediclIcon_Hvr.png" class="w-100" />
+            <span class="d-block text-center">MEDICAL</span>
+          </a>
+        </div>
+        <div class="col-sm-2">
+          <a href="#" class="text-center">
+            <img src="assets/img/xBankingIcon.png" class="w-100" />
+            <span class="d-block text-center">BANKING</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<div class="container-fluid py-indent">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-10 text-center">
+        <img src="assets/img/Map-Locations-Juego-Studio.jpg" class="w-100" />
+      </div>
+    </div>
+  </div>
+</div>
 
 
 <!-- Footer -->
