--- a/contact-us.html
+++ b/contact-us.html
@@ -108,7 +108,7 @@
       <div class="col-lg-6">
       <h1 class="text-white" data-aos="fade-right">We’d Love to Hear From You!</h1>
       
-      <p class="text-white" data-aos="fade-up">Please submit your requirements or queries below and we will get in touch with you shortly.</p>
+      <p class="text-white mb-0" data-aos="fade-up">Please submit your requirements or queries below and we will get in touch with you shortly.</p>
       
     </div>
     </div>
