--- a/concept-design.html
+++ b/concept-design.html
@@ -411,37 +411,16 @@
   <div class="row">
 <div class="col-md-4">
   <div class="contact-item">
-    <h3>Company</h3>
+    <h3>Services</h3>
     <ul class="footer_nav">
       <li>
-        <a href="#">Blog</a>
+        <a href="web3-game-development.html">Web3 Game Development</a>
       </li>
       <li>
-        <a href="#">Careers</a>
+        <a href="desktop-game-development-company.html">Desktop Game Development</a>
       </li>
       <li>
-        <a href="#">About Us</a>
-      </li>
-      <li>
-        <a href="#">Contact Us</a>
-      </li>
-      <li>
-        <a href="#">Portfolio</a>
-      </li>
-      <li>
-        <a href="#">Brochure</a>
-      </li>
-      <li>
-        <a href="#">Work Culture</a>
-      </li>
-      <li>
-        <a href="#">Write for Us</a>
-      </li>
-      <li>
-        <a href="#">Our Specialization</a>
-      </li>
-      <li>
-        <a href="#">Awards & Recognition</a>
+        <a href="mobilegamedevelopment.html">Mobile Game Development</a>
       </li>
     </ul>
   </div>
@@ -449,31 +428,16 @@
 </div>
 <div class="col-md-4">
   <div class="contact-item">
-    <h3>Solutions</h3>
+    <h3>Technologies</h3>
     <ul class="footer_nav">
       <li>
-        <a href="#">Poker Software</a>
+        <a href="nodeJS-game-server.html">NodeJS Game Server</a>
       </li>
       <li>
-        <a href="#">Casino Software</a>
+        <a href="html5-game-development.html">HTML5 Game Development</a>
       </li>
       <li>
-        <a href="#">Rummy Software</a>
-      </li>
-      <li>
-        <a href="#">Teen Patti Software</a>
-      </li>
-      <li>
-        <a href="#">Live Casino Software</a>
-      </li>
-      <li>
-        <a href="#">White Label Casino</a>
-      </li>
-      <li>
-        <a href="#">White Label Poker</a>
-      </li>
-      <li>
-        <a href="#">iGaming Software</a>
+        <a href="unity3D-game-development.html">Unity3D Game Development</a>
       </li>
     </ul>
   </div>
@@ -481,34 +445,19 @@
 </div>
 <div class="col-md-4">
   <div class="contact-item">
-    <h3>Service</h3>
+    <h3>Art & Design</h3>
     <ul class="footer_nav">
       <li>
-        <a href="#">Poker Game Development</a>
+        <a href="animations.html">Animations</a>
       </li>
       <li>
-        <a href="#">Rummy Game Development</a>
+        <a href="character-design.html">Character Design</a>
       </li>
       <li>
-        <a href="#">Teen Patti Game Development</a>
+        <a href="ui-ux-design.html">UI/UX Design</a>
       </li>
       <li>
-        <a href="#">Pool Game Development</a>
-      </li>
-      <li>
-        <a href="#">Card Game Development</a>
-      </li>
-      <li>
-        <a href="#">Ludo Game Development</a>
-      </li>
-      <li>
-        <a href="#">BlackJack Game Development</a>
-      </li>
-      <li>
-        <a href="#">Baccarat Game Development</a>
-      </li>
-      <li>
-        <a href="#">Roulette Game Development</a>
+        <a href="concept-design.html">Concept Design</a>
       </li>
     </ul>
   </div>
@@ -518,31 +467,10 @@
     <h3>More</h3>
     <ul class="footer_nav">
       <li>
-        <a href="#">Texas Holdem Poker</a>
+        <a href="about-us.html">About Us</a>
       </li>
       <li>
-        <a href="#">Seven Stud Poker</a>
-      </li>
-      <li>
-        <a href="#">Omaha Poker Game</a>
-      </li>
-      <li>
-        <a href="#">Andar Bahar Game</a>
-      </li>
-      <li>
-        <a href="#">Triple Chance Game</a>
-      </li>
-      <li>
-        <a href="#">Slot Game Development</a>
-      </li>
-      <li>
-        <a href="#">Bingo Software Development</a>
-      </li>
-      <li>
-        <a href="#">Keno Game Development</a>
-      </li>
-      <li>
-        <a href="#">OFC Poker Game Development</a>
+        <a href="contact-us.html">Contact Us</a>
       </li>
     </ul>
   </div>
