--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
 
-<div class="container-fluid banner">
+<div class="container-fluid banner banner-main">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
@@ -1053,7 +1053,7 @@ document.addEventListener('DOMContentLoaded', function () {
               }
           });
   $(document).on('scroll', function() {
-              if ($(window).scrollTop() > 100) {
+              if ($(window).scrollTop() > 120) {
                   $('body').addClass('sticky_body');
               } else {
                   $('body').removeClass('sticky_body');
