--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button">Services</a>
           <ul class="sub-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="mobilegamedevelopment.html">Mobile Game Development</a></li>
+            <li><a class="dropdown-item" href="html5-game-development.html">HTML5 Game Development</a></li>
             <li><a class="dropdown-item" href="desktop-game-development-company.html">Desktop Game Development</a></li>
             <li><a class="dropdown-item" href="web3-game-development.html">Web3 Game Development</a></li>
           </ul>
@@ -67,9 +68,9 @@
         <li class="nav-item dropdown_menu">
           <a class="nav-link active dropdown-toggle" id="Technologyservice" role="button">Technologies</a>
           <ul class="sub-menu" aria-labelledby="Technologyservice">
-            <li><a class="dropdown-item" href="unity3D-game-development.html">Unity3D Game Development</a></li>
-            <li><a class="dropdown-item" href="html5-game-development.html">HTML5 Game Development</a></li>
-            <li><a class="dropdown-item" href="nodeJS-game-server.html">NodeJS Game Server</a></li>
+            <li><a class="dropdown-item" href="unity3D-game-development.html">Unity3D</a></li>
+            <li><a class="dropdown-item" href="html5-game-development.html">HTML5</a></li>
+            <li><a class="dropdown-item" href="nodeJS-game-server.html">NodeJS</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown_menu">
@@ -1041,7 +1042,7 @@ document.addEventListener('DOMContentLoaded', function () {
 <script>
   $(".dropdown_menu a").click(function(){
     $(this).toggleClass("dropdown_menu_active");
-    $(".sub-menu").toggleClass("sub_menu_aftive");
+    $(this).next(".sub-menu").toggleClass("sub_menu_aftive");
   });
 </script>
 <script>
