--- a/animations.html
+++ b/animations.html
@@ -60,16 +60,17 @@
           <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button">Services</a>
           <ul class="sub-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="mobilegamedevelopment.html">Mobile Game Development</a></li>
+            <li><a class="dropdown-item" href="html5-game-development.html">HTML5 Game Development</a></li>
             <li><a class="dropdown-item" href="desktop-game-development-company.html">Desktop Game Development</a></li>
-            <li><a class="dropdown-item" href="web3-game-development.html">Web3 Game Development</a></li>
+            <!-- <li><a class="dropdown-item" href="web3-game-development.html">Web3 Game Development</a></li> -->
           </ul>
         </li>
         <li class="nav-item dropdown_menu">
           <a class="nav-link active dropdown-toggle" id="Technologyservice" role="button">Technologies</a>
           <ul class="sub-menu" aria-labelledby="Technologyservice">
-            <li><a class="dropdown-item" href="unity3D-game-development.html">Unity3D Game Development</a></li>
-            <li><a class="dropdown-item" href="html5-game-development.html">HTML5 Game Development</a></li>
-            <li><a class="dropdown-item" href="nodeJS-game-server.html">NodeJS Game Server</a></li>
+            <li><a class="dropdown-item" href="unity3D-game-development.html">Unity3D</a></li>
+            <li><a class="dropdown-item" href="html5-game-development.html">HTML5</a></li>
+            <li><a class="dropdown-item" href="nodeJS-game-server.html">NodeJS</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown_menu">
@@ -531,7 +532,7 @@ Area Jaipur, (Raj) India
 
 <!-- Chat btn -->
 
-<button class="chat_btn chat_btn_dsk"  data-bs-toggle="modal" data-bs-target="#sendusyourinquiry"><i class="fa fa-envelope"></i> Send us your inquiry</button>
+<button class="chat_btn chat_btn_dsk"  data-bs-toggle="modal" data-bs-target="#sendusyourinquiry"><i class="fa fa-envelope"></i> Share your requirement</button>
 <a href="#" class="whatsapp_chat chat_btn_dsk" style="width: 50px;height: 50px;font-size: 30px;"><i class="fa fa-whatsapp"></i></a>
 <div class="container-fluid fix_chat">
   <a href="#" class="whatsapp_chat btn_chat"><i class="fa fa-whatsapp"></i></a>
@@ -545,7 +546,7 @@ Area Jaipur, (Raj) India
 
 
 
- <!-- Send us your inquiry -->
+ <!-- Share your requirement -->
 
 <div class="modal fade request_qoute right_modal" id="sendusyourinquiry" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -627,7 +628,7 @@ Area Jaipur, (Raj) India
     </div>
 </div>
 
- <!-- Send us your inquiry End! -->
+ <!-- Share your requirement End! -->
 
 
 <script>
