--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li><a class="dropdown-item" href="mobilegamedevelopment.html">Mobile Game Development</a></li>
             <li><a class="dropdown-item" href="html5-game-development.html">HTML5 Game Development</a></li>
             <li><a class="dropdown-item" href="desktop-game-development-company.html">Desktop Game Development</a></li>
-            <li><a class="dropdown-item" href="web3-game-development.html">Web3 Game Development</a></li>
+            <!-- <li><a class="dropdown-item" href="web3-game-development.html">Web3 Game Development</a></li> -->
           </ul>
         </li>
         <li class="nav-item dropdown_menu">
@@ -789,7 +789,7 @@ Area Jaipur, (Raj) India
 
 <!-- Chat btn -->
 
-<button class="chat_btn chat_btn_dsk"  data-bs-toggle="modal" data-bs-target="#sendusyourinquiry"><i class="fa fa-envelope"></i> Send us your inquiry</button>
+<button class="chat_btn chat_btn_dsk"  data-bs-toggle="modal" data-bs-target="#sendusyourinquiry"><i class="fa fa-envelope"></i> Share your requirement</button>
 <a href="#" class="whatsapp_chat chat_btn_dsk" style="width: 50px;height: 50px;font-size: 30px;"><i class="fa fa-whatsapp"></i></a>
 <div class="container-fluid fix_chat">
   <a href="#" class="whatsapp_chat btn_chat"><i class="fa fa-whatsapp"></i></a>
